--- a/LavaJatoBobAPI/appsettings.json
+++ b/LavaJatoBobAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "conexao": "Server=PC03LAB2533\\SENAI;Database=LavaJatoBob;User Id=sa; Password=senai.123;"
+    "conexao": "Server=RAFAELMECENAS\\DBPRACTICE;Database=LavaJatoBob;User Id=sa; Password=senha123;"
   },
   "Logging": {
     "LogLevel": {
